Added historical_data_validator test & cases

--- a/pytest.ini
+++ b/pytest.ini
@@ -1,3 +1,4 @@
 [pytest]
 markers =
     date_validator: Tests for the date validator.
+    historical_data_validator: Tests for the historical data validator.
