Added tests for historical data handler get_tickers.

--- a/pytest.ini
+++ b/pytest.ini
@@ -2,3 +2,4 @@
 markers =
     date_validator: Tests for the date validator.
     historical_data_validator: Tests for the historical data validator.
+    historical_data_handler: Tests for the historical data handler.
