--- a/tox.ini
+++ b/tox.ini
@@ -1,8 +1,9 @@
 [tox]
 envlist = py39
+skipsdist = True
 
 [testenv]
-skipsdist=true
+skipsdist = True
 setenv =
     PYTHONPATH = {toxinidir}
 changedir = tests
